syntax = "proto3";
option java_multiple_files = true;
package trocadilho;


service TrocadilhoService {
    rpc listTrocadilhos (GetTrocadilhoRequest) returns (APIResponse);
    rpc getTrocadilho (GetTrocadilhoRequest) returns (TrocadilhoResponse);
    rpc insertTrocadilho (TrocadilhoRequest) returns (APIResponse);
    rpc updateTrocadilho (UpdateTrocadilhoRequest) returns (APIResponse);
    rpc deleteTrocadilho (DeleteTrocadilhoRequest) returns (APIResponse);
    rpc doGreeting (GreetingRequest) returns (APIResponse);

}

service LoginService {
    rpc login (LoginRequest) returns (APIResponse);
}

message TrocadilhoRequest {
    string username = 1;
    string trocadilho = 2;
}

message UpdateTrocadilhoRequest {
    string code = 1;
    string trocadilho = 2;
}
message DeleteTrocadilhoRequest {
    string code = 1;
}

message GetTrocadilhoRequest {
    string name =1;
}

message APIResponse {
    string code = 1;
    string message = 2;
}

message TrocadilhoResponse {
    string code = 1;
    bool underEdition = 2;
    string message = 3;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message GreetingRequest {
    string port = 1;
}